# Spring_23

./: .gitignore  README.md
DBMS_Lab/: ER.drawio  README.md
DBMS_Lab/Assignment_1/: ER.drawio  README.md
DBMS_Lab/Assignment_2/: Assignment_2.sql  Delete.sql  Drop.sql
DBMS_Lab/Assignment_3/: Assignment_3  Assignment_3.c  Assignment_3.py  Assignment_3.sql  pontu
Networks_Lab/Assignment_1/: README.md  sample_code.c
Networks_Lab/Assignment_1/Question_1/: time_client  time_client.c  time_server  time_server.c
Networks_Lab/Assignment_1/Question_2/: client  client.c  server  server_it.c
Networks_Lab/Assignment_2/Question_1/: timeclient.c  timeserver.c
Networks_Lab/Assignment_2/Question_2/: sh_client.c  sh_server.c
Networks_Lab/Assignment_3/: client.c  lb.c  server  server.c
Networks_Lab/Assignment_4/: MyHTTP  MyHTTP.c  MyHttp.c  MyOwnBrowser  MyOwnBrowser.c
Networks_Lab/Assignment_5/: README.md  documentation.txt  makefile  mysocket.c  mysocket.h
Networks_Lab/Assignment_6/: Pinger.c  gfgPing  gfgPing.c  packetsniffer.c  pingnetinfo  pingnetinfo.c
OS_Lab/asgn1/Question_1/: Assgn1_1_7.sh
OS_Lab/asgn1/Question_2/: Assgn1_2_7.sh  dummy.sh  output.txt  validation_results.txt
OS_Lab/asgn2/: Assignment2_7_20CS10081_20CS10075_20CS10038_20CS10019.cpp  CMakeLists.txt  assgn2.squashbug.heuristic.txt  sig.h  trojan.c  utilities.h
OS_Lab/asgn3/: consumer.cpp  graph.cpp  main.cpp  test.cpp
OS_Lab/asgn_3/: consumer.cpp  graph.h
OS_Lab/asgn_3_4/: CMakeLists.txt  print_nbrs.cpp  producer.cpp
OS_Lab/asgn_4/: DESIGNDOC.txt  sns.cpp
(+14 files in other folders)
